[project]
name = "load"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
    {name = "mingk42", email = "xoals123456t@gmail.com"},
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
cnt="load.load:load_data"


[tool.pdm]
distribution = false
